# rocketstats

./: .env  Cargo.toml  Dockerfile  docker-compose.yml  entrypoint.sh
migrations/: V1__create_event_tracking_table.sql
src/: main.rs  models.rs
src/static/: script.js
static/: script.js
