[package]
name = "rocketstats_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tide = "0.16.0"
async-std = { version = "1.10.0", features = ["attributes"] }
tide-rustls = "0.1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.5.9", features = ["runtime-async-std-native-tls", "postgres", "macros", "chrono"] }
