[package]
name = "rocketstats_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tide = { version = "0.16.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
chrono-tz = "0.5"
reqwest = { version = "0.11", features = ["json"] }
anyhow = "1.0"
tokio = { version = "1", features = ["full"] }
surf = { version = "2.3.2" }
async-native-tls = "0.3.3"
mongodb = { version = "2.5.0", default-features = false, features = ["async-std-runtime"] }

[tide]
default-features = false
features = ["runtime"]
